# stakit

./: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  README.md  code-check.sh  cspell.json  eslint.config.mjs  package.json  rust-toolchain.toml  skills-lock.json  tsconfig.base.json
.claude/skills/: allocator-migration  memory-benchmark
.claude/skills/feature/: SKILL.md
crates/ai-sdk/: Cargo.toml  README.md
crates/ai-sdk-derive/: Cargo.toml
crates/ai-sdk-derive/src/: lib.rs
crates/ai-sdk/examples/: chat.rs  test.rs.bak  weather_agent.rs
crates/ai-sdk/src/: agent.rs  agent_cx.rs  cache.rs  cancel.rs  context.rs  control.rs  cx.rs  error.rs  lib.rs  llm.rs  loop_event.rs  mcp.rs  message.rs  middleware.rs  provider.rs  retry.rs  skill.rs  tool.rs  usage.rs
crates/ai-sdk/src/provider/: claude.rs  openai.rs
crates/ai-sdk/tests/: agent_loop.rs  agent_loop_extra.rs  cache.rs  cache_live.rs  e2e.rs  extensibility.rs  llm_extract.rs  llm_live.rs  middleware_compose.rs  provider_switch.rs  retry.rs  skills_offline.rs  tool_macro.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  error.rs  lib.rs  options.rs  pool.rs  result.rs  stream.rs  ws.rs
crates/client/tests/: parity.rs  security.rs  wss.rs
crates/model/: Cargo.toml
crates/model-derive/: Cargo.toml
crates/model-derive/src/: emit_jsonschema.rs  emit_ts.rs  emit_validate.rs  ir.rs  lib.rs
crates/model/benches/: validation.rs
crates/model/src/: error.rs  json_schema.rs  lib.rs  model.rs  ts_type.rs  validate.rs
crates/model/src/ts_type/: impl_collections.rs  impl_primitives.rs  ts_type_test.rs
crates/model/src/validate/: collections.rs  email.rs  error.rs  pattern.rs  range.rs  string.rs  url.rs  validate_test.rs
crates/model/tests/: camel.rs  derive_enum.rs  derive_lifetime.rs  derive_nested.rs  derive_rules.rs  derive_schema.rs  derive_struct.rs
crates/orm/: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
crates/orm-cli/: Cargo.toml
crates/orm-cli/src/: diff.rs  main.rs  migrate.rs  model.rs  parse.rs
crates/orm-derive/: Cargo.toml
crates/orm-derive/src/: lib.rs  types.rs
crates/orm/benches/: build.rs  db_postgres.rs  db_sqlite.rs
crates/orm/migrations/: 0001_init.sql  0002_add_user_active.sql
crates/orm/src/: composite.rs  db.rs  driver.rs  error.rs  exec.rs  expr.rs  geo.rs  ident.rs  insert.rs  json.rs  lib.rs  mutation.rs  nanoid.rs  projection.rs  query.rs  raw.rs  render.rs  schema.rs  sql.rs  value.rs  vector.rs
crates/orm/src/composite/: composite_test.rs
crates/orm/src/dialect/: mod.rs  mysql.rs  mysql_test.rs  postgres.rs  postgres_test.rs  sqlite.rs  sqlite_test.rs  turso.rs  turso_test.rs
crates/orm/src/driver/: mysql.rs  postgres.rs  sqlite.rs  turso.rs
crates/orm/src/sql/: sql_test.rs
crates/orm/tests/: composite_index_test.rs  fts_rank_test.rs  mysql_test.rs  pgvector_smoke.rs  postgres_test.rs  rls_test.rs  schema_ddl.rs  sql_building.rs  sqlite_test.rs  string_fk_test.rs  turso_test.rs
crates/router/: Cargo.toml  README.md
crates/router-derive/: Cargo.toml
crates/router-derive/src/: lib.rs  response_error.rs
crates/router/benches/: dispatch.rs
crates/router/src/: action.rs  client.rs  cx.rs  endpoint.rs  error.rs  lib.rs  middleware.rs  reply.rs  router.rs  session.rs  ts.rs
crates/router/tests/: borrow.rs  camel.rs  camel_action_names.rs  crash_safety.rs  on_error.rs  response_error.rs  router.rs  security.rs
crates/stakit/: Cargo.toml
crates/stakit/src/: lib.rs
docs/: ai-sdk-design.md  architecture.md  performance.md  router.md  transport.md
docs/superpowers/plans/: 2026-06-04-agent-refactor.md  orm-rls-roles.md  orm-schema-gaps.md
docs/superpowers/specs/: 2026-06-02-stakit-orm-design.md  2026-06-04-agent-refactor-design.md
examples/axum-server/: Cargo.toml  README.md  example-client.ts  integration.test.ts  types.d.ts
examples/axum-server/src/: lib.rs  main.rs
examples/axum-server/tests/: e2e.rs  zerocopy.rs
