[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/samuelgja/stakit"
authors = ["samuelgja"]
rust-version = "1.85"

[workspace.dependencies]
# External
hashbrown = "0.17"
indexmap = "2.14"
garde = { version = "0.23", features = ["email", "url", "pattern", "regex"] }
thiserror = "2.0"
# Proc-macro toolchain (model-derive)
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
# Benchmarking
divan = "0.1"
# Internal crates
stakit-model = { path = "crates/model", version = "0.1.0" }
stakit-model-derive = { path = "crates/model-derive", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pragmatic relaxations
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Conflicts with the `unreachable_pub` rust lint (which we enable); that lint
# wants `pub(crate)` for items in private modules, this one wants bare `pub`.
redundant_pub_crate = "allow"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
incremental = true

# Release profile: optimize for a library shipped downstream.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
