[workspace]
members = ["crates/*"]
exclude = ["examples/axum-server"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/samuelgja/stakit"
authors = ["samuelgja"]
rust-version = "1.85"

[workspace.dependencies]
# External
hashbrown = "0.17.1"
indexmap = { version = "2.14.0", features = ["serde"] }
thiserror = "2.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
async-stream = "0.3"
tokio = { version = "1", default-features = false }
# Client transport
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "stream", "query", "http2", "rustls"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
bytes = "1.11"
dotenvy = "0.15"
# Proc-macro toolchain (model-derive)
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
# Benchmarking
divan = "0.1"
# Database (stakit-orm)
# Base sqlx (no backend). Each backend is enabled by a stakit-orm cargo feature
# (postgres/sqlite/mysql) so consumers compile only the driver they use.
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "uuid", "chrono", "json", "macros", "migrate"] }
libsql = { version = "0.9.30", default-features = false, features = ["core", "remote"] }
smallvec = { version = "1.15.1", features = ["union", "const_generics"] }
getrandom = "0.4.2"
tracing = "0.1.44"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
postgresql_embedded = "0.20.2"
# Internal crates
stakit-orm = { path = "crates/orm", version = "0.1.0" }
stakit-orm-derive = { path = "crates/orm-derive", version = "0.1.0" }
stakit-model = { path = "crates/model", version = "0.1.0" }
stakit-model-derive = { path = "crates/model-derive", version = "0.1.0" }
stakit-router = { path = "crates/router", version = "0.1.0" }
stakit-router-derive = { path = "crates/router-derive", version = "0.1.0" }
stakit-ai-sdk = { path = "crates/ai-sdk", version = "0.1.0" }
stakit-ai-sdk-derive = { path = "crates/ai-sdk-derive", version = "0.1.0" }
stakit-client = { path = "crates/client", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pragmatic relaxations
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Conflicts with the `unreachable_pub` rust lint (which we enable); that lint
# wants `pub(crate)` for items in private modules, this one wants bare `pub`.
redundant_pub_crate = "allow"
# Noisy nursery lint: not every future needs to be `Send` (the router's erasure
# layer enforces `Send` where it actually matters).
future_not_send = "allow"

[profile.dev]
opt-level = 0
debug = false          # no debugger in use → drop debuginfo (biggest target-size win)
overflow-checks = true
incremental = true


# Release profile: optimize for a library shipped downstream.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
