[package]
name = "stakit-model-derive"
description = "Derive macro for stakit-model — `#[derive(Model)]`."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[features]
# Emit camelCase field names in generated TypeScript + validation paths
# (pairs with serde `#[serde(rename_all = "camelCase")]`).
camel = []
# Enable the `#[derive(JsonSchema)]` macro (JSON Schema emitter). Opt-in: only
# tool-argument types need it, so plain validation/TS users don't pay for it.
schema = []

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[lints]
workspace = true
