[package]
name = "stakit-model"
description = "Derive-based validation + TypeScript type export. Inspired by ggtype."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
hashbrown.workspace = true
indexmap.workspace = true
regex.workspace = true
stakit-model-derive.workspace = true

[features]
# camelCase TypeScript field names + validation paths (snake_case Rust structs).
camel = ["stakit-model-derive/camel"]

[dev-dependencies]
divan.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bench]]
name = "validation"
harness = false

[lints]
workspace = true
