[package]
name = "stakit-orm"
description = "High-performance, type-safe Postgres ORM on sqlx. Drizzle-inspired."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
stakit-orm-derive.workspace = true
sqlx.workspace = true
smallvec.workspace = true
getrandom.workspace = true
thiserror.workspace = true
futures.workspace = true
async-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid.workspace = true
chrono.workspace = true
divan.workspace = true
postgresql_embedded.workspace = true
sqlx = { workspace = true }
futures.workspace = true

[[bench]]
name = "build"
harness = false

[lints]
workspace = true
