[package]
name = "stakit-orm"
description = "High-performance, type-safe, database-agnostic ORM (Postgres, SQLite, MySQL, Turso/libSQL). Drizzle-inspired."
readme = "README.md"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
# Default to Postgres (the crate's original backend). Other backends are opt-in
# so consumers don't compile sqlx-mysql / sqlx-sqlite / libsql unless requested.
default = ["postgres"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
turso = ["dep:libsql"]

[dependencies]
stakit-orm-derive.workspace = true
sqlx.workspace = true
serde_json.workspace = true
libsql = { workspace = true, optional = true }
smallvec.workspace = true
getrandom.workspace = true
thiserror.workspace = true
futures.workspace = true
async-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid.workspace = true
chrono.workspace = true
serde_json.workspace = true
divan.workspace = true
postgresql_embedded.workspace = true
sqlx = { workspace = true }
futures.workspace = true

[[bench]]
name = "build"
harness = false

[lints]
workspace = true
