[package]
name = "stakit-router-derive"
description = "The `#[action]` attribute macro for stakit-router."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[lints]
workspace = true
