[package]
name = "stakit-router"
description = "Framework-agnostic action router: validation, routing, action-to-action calls, and TypeScript generation."
readme = "README.md"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
stakit-model.workspace = true
stakit-router-derive.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
serde.workspace = true
# `raw_value` powers the zero-copy borrow path: the dispatch envelope parses each
# call's params as a borrowed `&RawValue` slice of the request buffer.
serde_json = { workspace = true, features = ["raw_value"] }
futures.workspace = true
async-stream.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time"] }

[features]
# camelCase TypeScript field names, wire format, and validation paths from
# `snake_case` Rust structs. Forwards to `stakit-model/camel` (→
# `stakit-model-derive/camel`); pairs with the `#[model]` attribute, which then
# injects `#[serde(rename_all = "camelCase")]` so the wire JSON matches the TS.
camel = ["stakit-model/camel", "stakit-router-derive/camel"]

[dev-dependencies]
divan.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }

[[bench]]
name = "dispatch"
harness = false

[lints]
workspace = true
